--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -44,6 +44,9 @@ if    ( NOT SCAI_COMPLETE_BUILD )
 	include ( SetBuildFlags )
 	include ( SCAIAssert )
 	include ( SetCPPFlags )
+else  ( NOT SCAI_COMPLETE_BUILD )
+	include ( Functions/CheckValueAtCompleteBuild )
+	CheckValueAtCompleteBuild ( common )
 endif ( NOT SCAI_COMPLETE_BUILD )
 
 include ( CheckC++11 )
