--- a/scai/logging/CMakeLists.txt
+++ b/scai/logging/CMakeLists.txt
@@ -45,6 +45,9 @@ if    ( NOT SCAI_COMPLETE_BUILD )
 	include ( SetBuildFlags )
 	include ( SCAIAssert )
 	include ( SetCPPFlags )
+else  ( NOT SCAI_COMPLETE_BUILD )
+	include ( Functions/CheckValueAtCompleteBuild )
+	CheckValueAtCompleteBuild ( logging )
 endif ( NOT SCAI_COMPLETE_BUILD )
 
 ### include all search packages
