--- a/scai/tasking/CMakeLists.txt
+++ b/scai/tasking/CMakeLists.txt
@@ -88,12 +88,26 @@ endforeach ( module ${SCAI_TASKING_INTERNAL_DEPS} )
 ## add subdirectories
 add_subdirectory ( examples )
 
-## search for files
-file ( GLOB CPP_SOURCES "*.cpp" )
-file ( GLOB HPP_HEADERS "*.hpp" )
+include( Functions/scaiProject )
+
+scai_project_start()
+
+scai_project_add (
+
+    HEADERS
+
+        NoSyncToken
+
+    CLASSES
+
+        SyncToken
+        TaskSyncToken
+        Task
+        ThreadPool
+)
 
 ### add library
-add_library ( scai_tasking ${SCAI_LIBRARY_TYPE} ${CPP_SOURCES} )
+add_library ( scai_tasking ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
 
 ## add link libraries
 list ( REVERSE SCAI_TASKING_INTERNAL_DEPS )
@@ -105,7 +119,10 @@ target_link_libraries ( scai_tasking ${SCAI_START_LINK_LIBRARIES} ${TASKING_LINK
 
 ### install ###
 install ( TARGETS scai_tasking DESTINATION lib )
-install ( FILES ${HPP_HEADERS} DESTINATION include/scai/tasking )
+
+include( Functions/relativeInstall )
+
+relative_install ( FILES ${CXX_HEADERS} DESTINATION include/scai/tasking )
 
 ## install library.hpp
 install ( FILES ../tasking.hpp DESTINATION include/scai )
