--- a/scai/lama/matutils/CMakeLists.txt
+++ b/scai/lama/matutils/CMakeLists.txt
@@ -32,11 +32,12 @@
 ###
 
 ### Add classes and header files ###
-set ( CLASSES
+
+scai_project_add (
+
+    CLASSES
+
         MatrixCreator
-    )
 
-lama_classes ( ${CLASSES} )
-
-### add sources and headers to parent scope ###
-lama_add ()
+    SET_PARENT_SCOPE
+)
