--- a/scai/lama/openmp/CMakeLists.txt
+++ b/scai/lama/openmp/CMakeLists.txt
@@ -97,8 +97,4 @@ set ( CLASSES
         OpenMPLAPACK
     )
 
-lama_classes ( ${CLASSES} )
-lama_headers ( ${HEADERS} )
-
-### add sources and headers to parent scope ###
-lama_add ()
+scai_project_add ( CLASSES ${CLASSES} HEADERS ${HEADERS} SET_PARENT_SCOPE )
