--- a/scai/lama/storage/CMakeLists.txt
+++ b/scai/lama/storage/CMakeLists.txt
@@ -48,8 +48,4 @@ set ( HEADERS
         CRTPMatrixStorage
     )
     
-lama_classes ( ${CLASSES} )
-lama_headers ( ${HEADERS} )
-
-### add sources and headers to parent scope ###
-lama_add ()
+scai_project_add ( CLASSES ${CLASSES} HEADERS ${HEADERS} SET_PARENT_SCOPE )
