restored orig CMakeList.txt

--- a/scai/CMakeLists.txt
+++ b/scai/CMakeLists.txt
@@ -26,7 +26,7 @@
  # @endlicense
  #
  # @brief Main specification file for CMake
- # @author Thomas Brandes
+ # @author Lauretta Schubert
  # @date 30.07.2015
  # @since 2.0.0
 ###
@@ -34,81 +34,170 @@
 cmake_minimum_required ( VERSION 2.8 )
 
 project ( LAMA_ALL CXX )
+set ( CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../CMake/Modules" )
 
-### Set Module Path
+include ( VersionDefinition )
 
-set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../CMake/Modules" )
+## general Settings for all projects
+include ( SetBuildFlags ) # VERBOSE, RPATH, LIB64
+include ( SCAIAssert )
+include ( SetCPPFlags )
 
-set ( SCAI_COMPLETE_BUILD FALSE )
+include ( CheckC++11 )
+if    ( NOT CXX_SUPPORTS_C11 )
+    include( Package/Boost )
+endif ( NOT CXX_SUPPORTS_C11 )
 
-# Project: common library
+include ( Functions/checkValue )
+include ( Functions/setAndCheckCache )
+include ( Functions/checkWhiteList )
+include ( Functions/concatCacheArguments )
 
-add_subdirectory( common )
+include ( ExternalDependencies )
 
-### Set variables for Findscai_common so other projects can use it 
+foreach    ( module ${SCAI_EXTERNAL_DEPS} )
+    include( Package/${module} )
+endforeach ( module ${SCAI_EXTERNAL_DEPS} )
 
-set ( SCAI_COMMON_LIBRARY scai_common 
-      CACHE FILEPATH "common library" )
+include ( LoggingSettings )
+include ( TracingSettings )
 
-set ( SCAI_COMMON_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/common
-      CACHE PATH "common include directory" )
+include ( ConcludeFlags )
 
-# Project: logging library
+## documentation
 
-add_subdirectory( logging )
-
-### Set variables for Findscai_common so other projects can use it 
-
-set ( SCAI_LOGGING_LIBRARY scai_logging 
-      CACHE FILEPATH "logging library" )
-
-set ( SCAI_LOGGING_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/logging
-      CACHE PATH "logging include directory" )
-
-# Project: tracing library
-
-add_subdirectory( tracing )
-
-### Set variables for Findscai_tracing so other projects can use it 
-
-set ( SCAI_TRACING_LIBRARY scai_tracing
-      CACHE FILEPATH "tracing library" )
-
-set ( SCAI_TRACING_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tracing
-      CACHE PATH "tracing include directory" )
-
-add_subdirectory( tasking )
-
-### Set variables for Findscai_tasking so other projects can use it 
-
-set ( SCAI_TASKING_LIBRARY scai_tasking 
-      CACHE FILEPATH  "library for thread tasking" )
-
-set ( SCAI_TASKING_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tasking
-      CACHE PATH "tasking include directory" )
-
-add_subdirectory( hmemo )
-
-### Set variables for Findscai_hmemo so further projects can use it 
-
-set ( SCAI_HMEMO_LIBRARY scai_hmemo 
-      CACHE FILEPATH  "library for hybrid memory on multiple devices" )
-
-set ( SCAI_HMEMO_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/hmemo
-      CACHE PATH "tracing include directory" )
-
-### Final: lama project
-
-add_subdirectory( lama )
-
-# Documentation
-
-find_package ( Sphinx )
+# user docu --> make userdoc, make userdoc_json, make install_userdoc
 include ( Package/Sphinx )
-find_package ( Doxygen )
+
+#system docu --> make doc
 include ( Package/Doxygen )
 
-## add custum target distClean
+## summary of what is found
+include ( Summaries/scai )
 
-include ( DistClean )
+## pass CACHE Variables to all subprojects via white listing
 
+# loads variables WHITELIST, MPI_WHITELIST, CUDA_WHITELIST, MIC_WHITELIST
+include ( NeededCacheVariables )
+
+set ( BOOST_ARGS "" )
+set ( CUDA_ARGS "" )
+set ( GPI2_ARGS "" )
+set ( GRAPHPARTITIONING_ARGS "" )
+set ( MIC_ARGS "" )
+set ( MPI_ARGS "" )
+set ( OPENMP_ARGS "" )
+set ( SCAI_BLAS_ARGS "" )
+
+get_cmake_property ( CACHE_VARS CACHE_VARIABLES )
+foreach    ( CACHE_VAR ${CACHE_VARS} )
+
+	#message ( STATUS "test VAR ${CACHE_VAR}" )
+	check_whitelist ( CACHE_VAR "${WHITELIST}" "CMAKE_ARGS" )
+	
+	check_whitelist ( CACHE_VAR "${BOOST_WHITELIST}" "BOOST_ARGS" )
+	check_whitelist ( CACHE_VAR "${CUDA_WHITELIST}" "CUDA_ARGS" )
+	check_whitelist ( CACHE_VAR "${GPI2_WHITELIST}" "GPI2_ARGS" )
+	check_whitelist ( CACHE_VAR "${GRAPHPARTIONING_WHITELIST}" "GRAPHPARTIONING_ARGS" )
+	check_whitelist ( CACHE_VAR "${MIC_WHITELIST}" "MIC_ARGS" )    
+	check_whitelist ( CACHE_VAR "${MPI_WHITELIST}" "MPI_ARGS" )
+	check_whitelist ( CACHE_VAR "${OPENMP_WHITELIST}" "OPENMP_ARGS" )
+	check_whitelist ( CACHE_VAR "${SCAI_BLAS_WHITELIST}" "SCAI_BLAS_ARGS" )
+    
+endforeach ( CACHE_VAR ${CACHE_VARS} )
+
+#message ( STATUS "Passed CMAKE_ARGS ${CMAKE_ARGS}" )
+
+#message ( STATUS "Passed BOOST_ARGS ${BOOST_ARGS}" )
+#message ( STATUS "Passed CUDA_ARGS ${CUDA_ARGS}" )
+#message ( STATUS "Passed GPI2_ARGS ${GPI_ARGS}" )
+#message ( STATUS "Passed GRAPHPARTIONING_ARGS ${GRAPHPARTIONING_ARGS}" )
+#message ( STATUS "Passed MIC_ARGS ${MIC_ARGS}" )
+#message ( STATUS "Passed MPI_ARGS ${MPI_ARGS}" )
+#message ( STATUS "Passed OPENMP_ARGS ${OPENMP_ARGS}" )
+#message ( STATUS "Passed SCAI_BLAS_ARGS ${SCAI_BLAS_ARGS}" )
+
+## define external projects
+
+# loads SCAI_[LIB]_INTERNAL_DEPS variables 
+include ( InternalDependencies )
+include ( ExternalDependencies )
+
+include ( ExternalProject )
+
+#message ( STATUS "general ${CMAKE_ARGS}" )
+
+## TODO: do in foreach loop
+#foreache ( project scai_common scai_common scai_logging scai_tracing scai_tasking scai_hmemo scai_lama )
+
+concatCacheArguments ( scai_common "CACHE_ARGS" )
+#message ( STATUS "common CACHE_ARGS ${CACHE_ARGS}" )
+
+ExternalProject_Add ( scai_common 
+			DEPENDS ${SCAI_COMMON_INTERNAL_DEPS}
+            PREFIX common
+            SOURCE_DIR ${CMAKE_SOURCE_DIR}/common
+            CMAKE_ARGS "-DSCAI_COMPLETE_BUILD=1"
+            CMAKE_CACHE_ARGS "${CMAKE_ARGS} ${CACHE_ARGS}"
+	    	BINARY_DIR common
+            )
+
+concatCacheArguments ( scai_logging "CACHE_ARGS" )
+#message ( STATUS "logging CACHE_ARGS ${CACHE_ARGS}" )
+         
+ExternalProject_Add ( scai_logging 
+            DEPENDS ${SCAI_LOGGING_INTERNAL_DEPS}
+            PREFIX logging
+            SOURCE_DIR ${CMAKE_SOURCE_DIR}/logging
+            CMAKE_ARGS "-DSCAI_COMPLETE_BUILD=1"
+            CMAKE_CACHE_ARGS "${CMAKE_ARGS} ${CACHE_ARGS}"
+	    	BINARY_DIR logging
+            )
+
+concatCacheArguments ( scai_tracing "CACHE_ARGS" )
+#message ( STATUS "tracing CACHE_ARGS ${CACHE_ARGS}" )
+           
+ExternalProject_Add ( scai_tracing 
+            DEPENDS ${SCAI_TRACING_INTERNAL_DEPS}
+            PREFIX tracing
+            SOURCE_DIR ${CMAKE_SOURCE_DIR}/tracing
+            CMAKE_ARGS "-DSCAI_COMPLETE_BUILD=1"
+            CMAKE_CACHE_ARGS "${CMAKE_ARGS} ${CACHE_ARGS}"
+	    	BINARY_DIR tracing
+            )
+
+concatCacheArguments ( scai_tasking "CACHE_ARGS" )
+#message ( STATUS "tasking CACHE_ARGS ${CACHE_ARGS}" )
+
+ExternalProject_Add ( scai_tasking 
+            DEPENDS ${SCAI_TASKING_INTERNAL_DEPS}
+            PREFIX tasking
+            SOURCE_DIR ${CMAKE_SOURCE_DIR}/tasking
+            CMAKE_ARGS "-DSCAI_COMPLETE_BUILD=1"
+            CMAKE_CACHE_ARGS "${CMAKE_ARGS} ${CACHE_ARGS}"
+	    	BINARY_DIR tasking
+            )
+
+concatCacheArguments ( scai_hmemo "CACHE_ARGS" )
+#message ( STATUS "hmemo CACHE_ARGS ${CACHE_ARGS}" )
+
+ExternalProject_Add ( scai_hmemo
+            DEPENDS ${SCAI_HMEMO_INTERNAL_DEPS}
+            PREFIX hmemo
+            SOURCE_DIR ${CMAKE_SOURCE_DIR}/hmemo
+            CMAKE_ARGS "-DSCAI_COMPLETE_BUILD=1"
+            CMAKE_CACHE_ARGS "${CMAKE_ARGS} ${CACHE_ARGS}"
+	    	BINARY_DIR hmemo
+            )
+
+concatCacheArguments ( scai_lama "CACHE_ARGS" )
+#message ( STATUS "lama CACHE_ARGS ${CACHE_ARGS}" )
+
+ExternalProject_Add ( scai_lama
+            DEPENDS ${SCAI_LAMA_INTERNAL_DEPS}
+            PREFIX lama
+            SOURCE_DIR ${CMAKE_SOURCE_DIR}/lama
+            CMAKE_ARGS "-DSCAI_COMPLETE_BUILD=1"
+            CMAKE_CACHE_ARGS "${CMAKE_ARGS} ${CACHE_ARGS}"
+	    	BINARY_DIR lama
+            )
