--- a/scai/lama/io/CMakeLists.txt
+++ b/scai/lama/io/CMakeLists.txt
@@ -33,9 +33,10 @@
 
 ### Add classes and header files ###
 
-scai_project_add (
+scai_project (
 
-   CLASSES
+    CLASSES
+
         mmio
         FileIO
         XDRFileStream
@@ -45,5 +46,5 @@ scai_project_add (
         FileType
         LAMAFile
 
-    SET_PARENT_SCOPE
+    ADD_PARENT_SCOPE
 )
