--- a/scai/lama/matutils/CMakeLists.txt
+++ b/scai/lama/matutils/CMakeLists.txt
@@ -33,11 +33,11 @@
 
 ### Add classes and header files ###
 
-scai_project_add (
+scai_project (
 
     CLASSES
 
         MatrixCreator
 
-    SET_PARENT_SCOPE
+    ADD_PARENT_SCOPE
 )
