--- a/scai/lama/mpi/CMakeLists.txt
+++ b/scai/lama/mpi/CMakeLists.txt
@@ -43,4 +43,4 @@ set ( HEADERS
         MPIUtils
     )
 
-scai_project_add ( CLASSES ${CLASSES} HEADERS ${HEADERS} SET_PARENT_SCOPE )
+scai_project ( CLASSES ${CLASSES} HEADERS ${HEADERS} ADD_PARENT_SCOPE )
