--- a/scai/lama/solver/CMakeLists.txt
+++ b/scai/lama/solver/CMakeLists.txt
@@ -74,5 +74,5 @@ set ( HEADERS
         shared_lib
     )
     
-scai_project_add ( CLASSES ${CLASSES} HEADERS ${HEADERS} SET_PARENT_SCOPE )
+scai_project ( CLASSES ${CLASSES} HEADERS ${HEADERS} ADD_PARENT_SCOPE )
 
