--- a/scai/lama/storage/CMakeLists.txt
+++ b/scai/lama/storage/CMakeLists.txt
@@ -48,4 +48,4 @@ set ( HEADERS
         CRTPMatrixStorage
     )
     
-scai_project_add ( CLASSES ${CLASSES} HEADERS ${HEADERS} SET_PARENT_SCOPE )
+scai_project ( CLASSES ${CLASSES} HEADERS ${HEADERS} ADD_PARENT_SCOPE )
