--- a/scai/lama/test/cuda/CMakeLists.txt
+++ b/scai/lama/test/cuda/CMakeLists.txt
@@ -31,11 +31,7 @@
  # @since 1.0.0
 ###
 
-### set this dir as lama source dir ###
-
-scai_project_start()
-
-scai_project_add(
+scai_project (
 
   CLASSES
 
