--- a/scai/lama/expression/CMakeLists.txt
+++ b/scai/lama/expression/CMakeLists.txt
@@ -33,7 +33,7 @@
 
 ### Add classes and header files ###
 
-scai_project_add (
+scai_project (
 
     HEADERS
 
@@ -43,5 +43,5 @@ scai_project_add (
         MatrixVectorExpressions
         VectorExpressions
 
-    SET_PARENT_SCOPE 
+    ADD_PARENT_SCOPE 
 )
