--- a/scai/lama/solver/logger/CMakeLists.txt
+++ b/scai/lama/solver/logger/CMakeLists.txt
@@ -45,4 +45,4 @@ set ( HEADERS
         LogLevel
     )
     
-scai_project_add ( CLASSES ${CLASSES} HEADERS ${HEADERS} SET_PARENT_SCOPE )
+scai_project ( CLASSES ${CLASSES} HEADERS ${HEADERS} ADD_PARENT_SCOPE )
