--- a/scai/tracing/CMakeLists.txt
+++ b/scai/tracing/CMakeLists.txt
@@ -83,15 +83,31 @@ endforeach ( module ${SCAI_TRACING_INTERNAL_DEPS} )
 
 ### build library
 
-## add subdirectories
-add_subdirectory ( examples )
+## set files in variables CXX_SOURCES and CXX_HEADERS
 
-## search for files
-file ( GLOB CPP_SOURCES "*.cpp" )
-file ( GLOB HPP_HEADERS "*.hpp" )
+include ( Functions/scaiProject )
+
+scai_project (
+
+    CLASSES
+
+        CallTreeTable
+        FileTable
+        RegionTable
+        TraceConfig
+        TraceData
+        TraceRegionRecord
+        VTInterface
+
+    HEADERS
+
+        CallStack
+        Counters
+        RegionEntry
+)
 
 ### add library
-add_library ( scai_tracing ${SCAI_LIBRARY_TYPE} ${CPP_SOURCES} )
+add_library ( scai_tracing ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
 
 ## add link libraries
 list ( REVERSE SCAI_TRACING_INTERNAL_DEPS )
@@ -100,6 +116,9 @@ foreach    ( module ${SCAI_TRACING_INTERNAL_DEPS} )
 	set ( TRACING_LINK_LIBRARIES ${TRACING_LINK_LIBRARIES} ${${upper_module}_LIBRARY} )
 endforeach    ( module ${SCAI_TRACING_INTERNAL_DEPS} )
 target_link_libraries ( scai_tracing ${SCAI_START_LINK_LIBRARIES} ${TRACING_LINK_LIBRARIES} ${SCAI_END_LINK_LIBRARIES} )
+
+## add subdirectories
+add_subdirectory ( examples )
 
 ### install ###
 install ( TARGETS scai_tracing DESTINATION lib/ )
