Small corrections required for used files in cmake

--- a/scai/hmemo/CMakeLists.txt
+++ b/scai/hmemo/CMakeLists.txt
@@ -108,6 +108,7 @@ scai_project (
 
     HEADERS                  # .hpp only
 
+         ContextArray
          LAMAArray
          LAMAArrayRef
          ReadAccess
