--- a/scai/lama/test/distributed/CMakeLists.txt
+++ b/scai/lama/test/distributed/CMakeLists.txt
@@ -84,7 +84,7 @@ lama_sources ( ${SOURCE_FILES} )
 # individual preprocessor definition 
 
 set_property( SOURCE ../Configuration.cpp 
-              PROPERTY COMPILE_DEFINITIONS LAMA_TESTFILE_PATH="${CMAKE_SOURCE_DIR}/../res/testfiles" 
+              PROPERTY COMPILE_DEFINITIONS LAMA_TESTFILE_PATH="${CMAKE_SOURCE_DIR}/../../res/testfiles" 
             )
 
 ### add definitions ###
