Fixed naming in examples Fixed some warning and wrong pathes in userdoc

--- a/scai/lama/examples/labelrank/Makefile
+++ b/scai/lama/examples/labelrank/Makefile
@@ -1,8 +1,8 @@
 include ../make.inc
 
-INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${LAMA_ROOT}/include
+INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include
 
-LD_FLAGS = ${LAMA_LD_FLAGS} -Wl,-rpath=${LAMA_ROOT}/lib
+LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib
 
 EXECUTABLE: labelrank.exe
 
