--- a/scai/lama/examples/make.inc.in
+++ b/scai/lama/examples/make.inc.in
@@ -30,11 +30,11 @@
 # @date 15.05.2013
 ##
 
-LAMA_ROOT=${CMAKE_INSTALL_PREFIX}
+SCAI_ROOT=${CMAKE_INSTALL_PREFIX}
 BOOST_INCLUDE_DIR=${BOOST_INCLUDE_DIR}
 CXX=${CMAKE_CXX_COMPILER}
 CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -D${SCAI_LOGGING_FLAG}
-LAMA_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lama
+SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lama -lscai_tasking -lscai_hmemo -lscai_tracing -lscai_logging -lscai_common
 
 # CMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
 # CMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS} 
