corrections to LAMA_TESTFILE_PATH in distributed tests

--- a/scai/lama/test/distributed/CMakeLists.txt
+++ b/scai/lama/test/distributed/CMakeLists.txt
@@ -87,7 +87,7 @@ scai_project (
 # individual preprocessor definition 
 
 set_property( SOURCE ../Configuration.cpp 
-              PROPERTY COMPILE_DEFINITIONS LAMA_TESTFILE_PATH="${CMAKE_SOURCE_DIR}/../res/testfiles" 
+              PROPERTY COMPILE_DEFINITIONS LAMA_TESTFILE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../../../../res/testfiles" 
             )
 
 ### add definitions ###
